# AZ-SNOWFLAKE-BROKER

./: .azure-build-pipelines.yml.un~  .gitignore  README.md  __main__.py  azure-build-pipelines.yml  azure-build-pipelines.yml~  change_log.md  config.py  pyproject.toml
env/: env.md
src/az_snowflake_broker/: check.py  collect.py
src/az_snowflake_broker/connectors/: Snowpark.py
src/az_snowflake_broker/queries/: .LICENSE.un~  .build_resource_table.sql.un~  build_resource_table.sql  build_resource_table.sql~
tests/: test_az_cli_snowflake.py
